--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "axis-monorepo",
   "private": true,
-  "packageManager": "yarn@1.22.22",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint"
   },
   "devDependencies": {
-    "turbo": "2.7.2",
+    "turbo": "latest",
     "prettier": "latest"
   },
   "workspaces": [
